--- a/templates/liquidpromptrc-dist.j2
+++ b/templates/liquidpromptrc-dist.j2
@@ -47,6 +47,7 @@ LP_TEMP_THRESHOLD=60
 
 # Use the shorten path feature if the path is too long to fit in the prompt
 # line.
+# Recommended value is 1
 {% if liquidprompt_enable_shorten_path is defined %}
 {%   if liquidprompt_enable_shorten_path %}
 LP_ENABLE_SHORTEN_PATH=1
