--- a/templates/liquidpromptrc-dist.j2
+++ b/templates/liquidpromptrc-dist.j2
@@ -22,339 +22,135 @@ LP_PS1_FILE={{ liquidprompt_ps1_file }}
 
 # Display the battery level when the level is below this threshold.
 # Recommended value is 75
-{% if liquidprompt_battery_threshold is defined %}
-LP_BATTERY_THRESHOLD={{ liquidprompt_battery_threshold }}
-{% else %}
-LP_BATTERY_THRESHOLD=75
-{% endif %}
+LP_BATTERY_THRESHOLD={{ liquidprompt_battery_threshold if liquidprompt_battery_threshold is defined else '75' }}
 
 # Display the load average when the load is above this threshold.
 # Recommended value is 60
-{% if liquidprompt_load_threshold is defined %}
-LP_LOAD_THRESHOLD={{ liquidprompt_load_threshold }}
-{% else %}
-LP_LOAD_THRESHOLD=60
-{% endif %}
+LP_LOAD_THRESHOLD={{ liquidprompt_load_threshold if liquidprompt_load_threshold is defined else '60' }}
 
 # Display the temperature when the temperate is above this threshold (in
 # degrees Celsius).
 # Recommended value is 60
-{% if liquidprompt_temp_threshold is defined %}
-LP_TEMP_THRESHOLD={{ liquidprompt_temp_threshold }}
-{% else %}
-LP_TEMP_THRESHOLD=60
-{% endif %}
+LP_TEMP_THRESHOLD={{ liquidprompt_temp_threshold if liquidprompt_temp_threshold is defined else '60' }}
 
 # Use the shorten path feature if the path is too long to fit in the prompt
 # line.
 # Recommended value is 1
-{% if liquidprompt_enable_shorten_path is defined %}
-{%   if liquidprompt_enable_shorten_path %}
-LP_ENABLE_SHORTEN_PATH=1
-{%   else %}
-LP_ENABLE_SHORTEN_PATH=0
-{%   endif %}
-{% else %}
-LP_ENABLE_SHORTEN_PATH=1
-{% endif %}
+LP_ENABLE_SHORTEN_PATH={{ '1' if liquidprompt_enable_shorten_path is defined and liquidprompt_enable_shorten_path else '0' }}
 
 # The maximum percentage of the screen width used to display the path before
 # removing the center portion of the path and replacing with '...'.
 # Recommended value is 35
-{% if liquidprompt_path_length is defined %}
-LP_PATH_LENGTH={{ liquidprompt_path_length }}
-{% else %}
-LP_PATH_LENGTH=35
-{% endif %}
+LP_PATH_LENGTH={{ liquidprompt_path_length if liquidprompt_path_length is defined else '35' }}
 
 # The number of directories (including '/') to keep at the beginning of a
 # shortened path.
 # Recommended value is 2
-{% if liquidprompt_path_keep is defined %}
-LP_PATH_KEEP={{ liquidprompt_path_keep }}
-{% else %}
-LP_PATH_KEEP=2
-{% endif %}
+LP_PATH_KEEP={{ liquidprompt_path_keep if liquidprompt_path_keep is defined else '2' }}
 
 # Determine if the hostname should always be displayed, even if not connecting
 # through network.
 # Defaults to 0 (do not display hostname when locally connected)
 # set to 1 if you want to always see the hostname
 # set to -1 if you want to never see the hostname
-{% if liquidprompt_hostname_always is defined %}
-LP_HOSTNAME_ALWAYS={{ liquidprompt_hostname_always }}
-{% else %}
-LP_HOSTNAME_ALWAYS=0
-{% endif %}
+LP_HOSTNAME_ALWAYS={{ liquidprompt_hostname_always if liquidprompt_hostname_always is defined else '0' }}
 
 # Use the fully qualified domain name (FQDN) instead of the short hostname when
 # the hostname is displayed
-{% if liquidprompt_enable_fqdn is defined %}
-{%   if liquidprompt_enable_fqdn %}
-LP_ENABLE_FQDN=1
-{%   else %}
-LP_ENABLE_FQDN=0
-{%   endif %}
-{% else %}
-LP_ENABLE_FQDN=0
-{% endif %}
+LP_ENABLE_FQDN={{ '1' if liquidprompt_enable_fqdn is defined and liquidprompt_enable_fqdn else '0' }}
 
 # Always display the user name, even if the user is the same as the one logged
 # in.
 # Defaults to 1 (always display the user name)
 # set to 0 if you want to hide the logged user (it will always display different
 # users)
-{% if liquidprompt_user_always is defined %}
-{%   if liquidprompt_user_always %}
-LP_USER_ALWAYS=1
-{%   else %}
-LP_USER_ALWAYS=0
-{%   endif %}
-{% else %}
-LP_USER_ALWAYS=1
-{% endif %}
+LP_USER_ALWAYS={{ '1' if liquidprompt_user_always is defined and liquidprompt_user_always else '0' }}
 
 # Display the percentages of load/batteries along with their
 # corresponding marks. Set to 0 to only print the colored marks.
 # Defaults to 1 (display percentages)
-{% if liquidprompt_percents_always is defined %}
-{%   if liquidprompt_percents_always %}
-LP_PERCENTS_ALWAYS=1
-{%   else %}
-LP_PERCENTS_ALWAYS=0
-{%   endif %}
-{% else %}
-LP_PERCENTS_ALWAYS=1
-{% endif %}
+LP_PERCENTS_ALWAYS={{ '1' if liquidprompt_percents_always is defined and liquidprompt_percents_always else '0' }}
 
 # Use the permissions feature and display a red ':' before the prompt to show
 # when you don't have write permission to the current directory.
 # Recommended value is 1
-{% if liquidprompt_enable_perm is defined %}
-{%   if liquidprompt_enable_perm %}
-LP_ENABLE_PERM=1
-{%   else %}
-LP_ENABLE_PERM=0
-{%   endif %}
-{% else %}
-LP_ENABLE_PERM=1
-{% endif %}
+LP_ENABLE_PERM={{ '1' if liquidprompt_enable_perm is defined and liquidprompt_enable_perm else '0' }}
 
 # Enable the proxy detection feature.
 # Recommended value is 1
-{% if liquidprompt_enable_proxy is defined %}
-{%   if liquidprompt_enable_proxy %}
-LP_ENABLE_PROXY=1
-{%   else %}
-LP_ENABLE_PROXY=0
-{%   endif %}
-{% else %}
-LP_ENABLE_PROXY=1
-{% endif %}
+LP_ENABLE_PROXY={{ '1' if liquidprompt_enable_proxy is defined and liquidprompt_enable_proxy else '0' }}
 
 # Enable the jobs feature.
 # Recommended value is 1
-{% if liquidprompt_enable_jobs is defined %}
-{%   if liquidprompt_enable_jobs %}
-LP_ENABLE_JOBS=1
-{%   else %}
-LP_ENABLE_JOBS=0
-{%   endif %}
-{% else %}
-LP_ENABLE_JOBS=1
-{% endif %}
+LP_ENABLE_JOBS={{ '1' if liquidprompt_enable_jobs is defined and liquidprompt_enable_jobs else '0' }}
 
 # Enable the load feature.
 # Recommended value is 1
-{% if liquidprompt_enable_load is defined %}
-{%   if liquidprompt_enable_load %}
-LP_ENABLE_LOAD=1
-{%   else %}
-LP_ENABLE_LOAD=0
-{%   endif %}
-{% else %}
-LP_ENABLE_LOAD=1
-{% endif %}
+LP_ENABLE_LOAD={{ '1' if liquidprompt_enable_load is defined and liquidprompt_enable_load else '0' }}
 
 # Enable the battery feature.
 # Recommended value is 1
-{% if liquidprompt_enable_batt is defined %}
-{%   if liquidprompt_enable_batt %}
-LP_ENABLE_BATT=1
-{%   else %}
-LP_ENABLE_BATT=0
-{%   endif %}
-{% else %}
-LP_ENABLE_BATT=1
-{% endif %}
+LP_ENABLE_BATT={{ '1' if liquidprompt_enable_batt is defined and liquidprompt_enable_batt else '0' }}
 
 # Enable the 'sudo credentials' feature.
 # Be warned that this may pollute the syslog if you don't have sudo
 # credentials, and the sysadmin will hate you.
-{% if liquidprompt_enable_sudo is defined %}
-{%   if liquidprompt_enable_sudo %}
-LP_ENABLE_SUDO=1
-{%   else %}
-LP_ENABLE_SUDO=0
-{%   endif %}
-{% else %}
-LP_ENABLE_SUDO=0
-{% endif %}
+LP_ENABLE_SUDO={{ '1' if liquidprompt_enable_sudo is defined and liquidprompt_enable_sudo else '0' }}
 
 # Enable the VCS features with the root account.
 # Recommended value is 0
-{% if liquidprompt_enable_vcs_root is defined %}
-{%   if liquidprompt_enable_vcs_root %}
-LP_ENABLE_VCS_ROOT=1
-{%   else %}
-LP_ENABLE_VCS_ROOT=0
-{%   endif %}
-{% else %}
-LP_ENABLE_VCS_ROOT=0
-{% endif %}
+LP_ENABLE_VCS_ROOT={{ '1' if liquidprompt_enable_vcs_root is defined and liquidprompt_enable_vcs_root else '0' }}
 
 # Enable the Git special features.
 # Recommended value is 1
-{% if liquidprompt_enable_git is defined %}
-{%   if liquidprompt_enable_git %}
-LP_ENABLE_GIT=1
-{%   else %}
-LP_ENABLE_GIT=0
-{%   endif %}
-{% else %}
-LP_ENABLE_GIT=1
-{% endif %}
+LP_ENABLE_GIT={{ '1' if liquidprompt_enable_git is defined and liquidprompt_enable_git else '0' }}
 
 # Enable the Subversion special features.
 # Recommended value is 1
-{% if liquidprompt_enable_svn is defined %}
-{%   if liquidprompt_enable_svn %}
-LP_ENABLE_SVN=1
-{%   else %}
-LP_ENABLE_SVN=0
-{%   endif %}
-{% else %}
-LP_ENABLE_SVN=1
-{% endif %}
+LP_ENABLE_SVN={{ '1' if liquidprompt_enable_svn is defined and liquidprompt_enable_svn else '0' }}
 
 # Enable the Mercurial special features.
 # Recommended value is 1
-{% if liquidprompt_enable_hg is defined %}
-{%   if liquidprompt_enable_hg %}
-LP_ENABLE_HG=1
-{%   else %}
-LP_ENABLE_HG=0
-{%   endif %}
-{% else %}
-LP_ENABLE_HG=1
-{% endif %}
+LP_ENABLE_HG={{ '1' if liquidprompt_enable_hg is defined and liquidprompt_enable_hg else '0' }}
 
 # Enable the Fossil special features.
 # Recommended value is 1
-{% if liquidprompt_enable_fossil is defined %}
-{%   if liquidprompt_enable_fossil %}
-LP_ENABLE_FOSSIL=1
-{%   else %}
-LP_ENABLE_FOSSIL=0
-{%   endif %}
-{% else %}
-LP_ENABLE_FOSSIL=1
-{% endif %}
+LP_ENABLE_FOSSIL={{ '1' if liquidprompt_enable_fossil is defined and liquidprompt_enable_fossil else '0' }}
 
 # Enable the Bazaar special features.
 # Recommanded value is 1
-{% if liquidprompt_enable_bzr is defined %}
-{%   if liquidprompt_enable_bzr %}
-LP_ENABLE_BZR=1
-{%   else %}
-LP_ENABLE_BZR=0
-{%   endif %}
-{% else %}
-LP_ENABLE_BZR=1
-{% endif %}
+LP_ENABLE_BZR={{ '1' if liquidprompt_enable_bzr is defined and liquidprompt_enable_bzr else '0' }}
 
 # Show time of when the current prompt was displayed. (Must be enabled and
 # disabled in the config file and not after liquidprompt has already been
 # sourced.)
-{% if liquidprompt_enable_time is defined %}
-{%   if liquidprompt_enable_time %}
-LP_ENABLE_TIME=1
-{%   else %}
-LP_ENABLE_TIME=0
-{%   endif %}
-{% else %}
-LP_ENABLE_TIME=0
-{% endif %}
+LP_ENABLE_TIME={{ '1' if liquidprompt_enable_time is defined and liquidprompt_enable_time else '0' }}
 
 # Show runtime of the previous command if over LP_RUNTIME_THRESHOLD
 # Recommended value is 0
-{% if liquidprompt_enable_runtime is defined %}
-{%   if liquidprompt_enable_runtime %}
-LP_ENABLE_RUNTIME=1
-{%   else %}
-LP_ENABLE_RUNTIME=0
-{%   endif %}
-{% else %}
-LP_ENABLE_RUNTIME=0
-{% endif %}
+LP_ENABLE_RUNTIME={{ '1' if liquidprompt_enable_runtime is defined and liquidprompt_enable_runtime else '0' }}
 
 # Minimal runtime (in seconds) before the runtime will be displayed
 # Recommended value is 2
-{% if liquidprompt_runtime_threshold is defined %}
-LP_RUNTIME_THRESHOLD={{ liquidprompt_runtime_threshold }}
-{% else %}
-LP_RUNTIME_THRESHOLD=2
-{% endif %}
+LP_RUNTIME_THRESHOLD={{ liquidprompt_runtime_threshold if liquidprompt_runtime_threshold is defined else '2'}}
 
 # Display the virtualenv that is currently activated, if any
 # Recommended value is 1
-{% if liquidprompt_enable_virtualenv is defined %}
-{%   if liquidprompt_enable_virtualenv %}
-LP_ENABLE_VIRTUALENV=1
-{%   else %}
-LP_ENABLE_VIRTUALENV=0
-{%   endif %}
-{% else %}
-LP_ENABLE_VIRTUALENV=1
-{% endif %}
+LP_ENABLE_VIRTUALENV={{ '1' if liquidprompt_enable_virtualenv is defined and liquidprompt_enable_virtualenv else '0' }}
 
 # Display the enabled software collections, if any
 # Recommended value is 1
-{% if liquidprompt_enable_scls is defined %}
-{%   if liquidprompt_enable_scls %}
-LP_ENABLE_SCLS=1
-{%   else %}
-LP_ENABLE_SCLS=0
-{%   endif %}
-{% else %}
-LP_ENABLE_SCLS=1
-{% endif %}
+LP_ENABLE_SCLS={{ '1' if liquidprompt_enable_scls is defined and liquidprompt_enable_scls else '0' }}
 
 # Show average system temperature
-{% if liquidprompt_enable_temp is defined %}
-{%   if liquidprompt_enable_temp %}
-LP_ENABLE_TEMP=1
-{%   else %}
-LP_ENABLE_TEMP=0
-{%   endif %}
-{% else %}
-LP_ENABLE_TEMP=1
-{% endif %}
+LP_ENABLE_TEMP={{ '1' if liquidprompt_enable_temp is defined and liquidprompt_enable_temp else '0' }}
 
 # When showing the time, use an analog clock instead of numeric values.
 # The analog clock is "accurate" to the nearest half hour.
 # You must have a unicode-capable terminal and a font with the "CLOCK"
 # characters.
 # Recommended value is 0
-{% if liquidprompt_time_analog is defined %}
-{%   if liquidprompt_time_analog %}
-LP_TIME_ANALOG=1
-{%   else %}
-LP_TIME_ANALOG=0
-{%   endif %}
-{% else %}
-LP_TIME_ANALOG=0
-{% endif %}
+LP_TIME_ANALOG={{ '1' if liquidprompt_time_analog is defined and liquidprompt_time_analog else '0' }}
 
 # Use the prompt as the title of the terminal window
 # The content is not customizable, the implementation is very basic,
@@ -362,44 +158,16 @@ LP_TIME_ANALOG=0
 # recommended value is 0
 # See LP_TITLE_OPEN and LP_TITLE_CLOSE to change escape characters to adapt this
 # feature to your specific terminal.
-{% if liquidprompt_enable_title is defined %}
-{%   if liquidprompt_enable_title %}
-LP_ENABLE_TITLE=1
-{%   else %}
-LP_ENABLE_TITLE=0
-{%   endif %}
-{% else %}
-LP_ENABLE_TITLE=0
-{% endif %}
+LP_ENABLE_TITLE={{ '1' if liquidprompt_enable_title is defined and liquidprompt_enable_title else '0' }}
 
 # Enable Title for screen and byobu
-{% if liquidprompt_enable_screen_title is defined %}
-{%   if liquidprompt_enable_screen_title %}
-LP_ENABLE_SCREEN_TITLE=1
-{%   else %}
-LP_ENABLE_SCREEN_TITLE=0
-{%   endif %}
-{% else %}
-LP_ENABLE_SCREEN_TITLE=0
-{% endif %}
+LP_ENABLE_SCREEN_TITLE={{ '1' if liquidprompt_enable_screen_title is defined and liquidprompt_enable_screen_title else '0' }}
 
 # Use different colors for the different hosts you SSH to
-{% if liquidprompt_enable_ssh_colors is defined %}
-{%   if liquidprompt_enable_ssh_colors %}
-LP_ENABLE_SSH_COLORS=1
-{%   else %}
-LP_ENABLE_SSH_COLORS=0
-{%   endif %}
-{% else %}
-LP_ENABLE_SSH_COLORS=0
-{% endif %}
+LP_ENABLE_SSH_COLORS={{ '1' if liquidprompt_enable_ssh_colors is defined and liquidprompt_enable_ssh_colors else '0' }}
 
 # Specify a list of complete and colon (":") separated paths in which, all vcs
 # will be disabled
-{% if liquidprompt_disabled_vcs_path is defined %}
-LP_DISABLED_VCS_PATH="{{ liquidprompt_disabled_vcs_path|join(':') }}"
-{% else %}
-LP_DISABLED_VCS_PATH=""
-{% endif %}
+LP_DISABLED_VCS_PATH="{{ liquidprompt_disabled_vcs_path|join(':') if liquidprompt_disabled_vcs_path is defined else '' }}"
 
 # vim: set et sts=4 sw=4 tw=120 ft=sh:
