--- a/templates/liquidpromptrc-dist.j2
+++ b/templates/liquidpromptrc-dist.j2
@@ -22,16 +22,16 @@ LP_PS1_FILE={{ liquidprompt_ps1_file }}
 
 # Display the battery level when the level is below this threshold.
 # Recommended value is 75
-LP_BATTERY_THRESHOLD={{ liquidprompt_battery_threshold if liquidprompt_battery_threshold is defined else '75' }}
+LP_BATTERY_THRESHOLD={{ liquidprompt_battery_threshold }}
 
 # Display the load average when the load is above this threshold.
 # Recommended value is 60
-LP_LOAD_THRESHOLD={{ liquidprompt_load_threshold if liquidprompt_load_threshold is defined else '60' }}
+LP_LOAD_THRESHOLD={{ liquidprompt_load_threshold }}
 
 # Display the temperature when the temperate is above this threshold (in
 # degrees Celsius).
 # Recommended value is 60
-LP_TEMP_THRESHOLD={{ liquidprompt_temp_threshold if liquidprompt_temp_threshold is defined else '60' }}
+LP_TEMP_THRESHOLD={{ liquidprompt_temp_threshold }}
 
 # Use the shorten path feature if the path is too long to fit in the prompt
 # line.
@@ -41,19 +41,19 @@ LP_ENABLE_SHORTEN_PATH={{ '1' if liquidprompt_enable_shorten_path is defined and
 # The maximum percentage of the screen width used to display the path before
 # removing the center portion of the path and replacing with '...'.
 # Recommended value is 35
-LP_PATH_LENGTH={{ liquidprompt_path_length if liquidprompt_path_length is defined else '35' }}
+LP_PATH_LENGTH={{ liquidprompt_path_length }}
 
 # The number of directories (including '/') to keep at the beginning of a
 # shortened path.
 # Recommended value is 2
-LP_PATH_KEEP={{ liquidprompt_path_keep if liquidprompt_path_keep is defined else '2' }}
+LP_PATH_KEEP={{ liquidprompt_path_keep }}
 
 # Determine if the hostname should always be displayed, even if not connecting
 # through network.
 # Defaults to 0 (do not display hostname when locally connected)
 # set to 1 if you want to always see the hostname
 # set to -1 if you want to never see the hostname
-LP_HOSTNAME_ALWAYS={{ liquidprompt_hostname_always if liquidprompt_hostname_always is defined else '0' }}
+LP_HOSTNAME_ALWAYS={{ liquidprompt_hostname_always }}
 
 # Use the fully qualified domain name (FQDN) instead of the short hostname when
 # the hostname is displayed
@@ -132,7 +132,7 @@ LP_ENABLE_RUNTIME={{ '1' if liquidprompt_enable_runtime is defined and liquidpro
 
 # Minimal runtime (in seconds) before the runtime will be displayed
 # Recommended value is 2
-LP_RUNTIME_THRESHOLD={{ liquidprompt_runtime_threshold if liquidprompt_runtime_threshold is defined else '2'}}
+LP_RUNTIME_THRESHOLD={{ liquidprompt_runtime_threshold }}
 
 # Display the virtualenv that is currently activated, if any
 # Recommended value is 1
